--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,14 @@
+.pad-top-10 {
+	padding-top: 10px;
+}
+.pad-top-20 {
+	padding-top: 20px;
+}
+.pad-top-30 {
+	padding-top: 30px;
+}
+
+
 .top-bar {
 	height: 5px;
 	background: #ca2129;
